--- a/src/app/users/crc/crc.component.html
+++ b/src/app/users/crc/crc.component.html
@@ -230,7 +230,16 @@
                                                 </angular2-multiselect>
                                                 </div>
                                                 <div class="uploadImgDrop">
-                                                <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+                                                        <div class="btn-group">                                                                
+                                                            <button type="button" class="uploadImgDrop" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">                                
+                                                                <i class="fa fa-ellipsis-h" aria-hidden="true"></i>                                
+                                                            </button>                     
+                                                            <div class="dropdown-menu dropdown-menu-right">
+                                                                <button class="dropdown-item" type="button">Link One</button>
+                                                                <button class="dropdown-item" type="button">Link One</button>
+                                                                <button class="dropdown-item" type="button">Link One</button>
+                                                            </div>
+                                                        </div>
                                                 </div>
                                             </div>
                                         </div>
