--- a/src/assets/sass/_fonts.scss
+++ b/src/assets/sass/_fonts.scss
@@ -1,7 +1,5 @@
-$roboto: "roboto",
-sans-serif;
-$lato: 'Lato',
-sans-serif;
+$roboto: "roboto",sans-serif;
+$lato: 'Lato',sans-serif;
 $sans: 'Open Sans';
 $base-font-size: 1rem;
 $text-13: 1rem;
