--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~font-awesome/css/font-awesome.css";
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-@import "~assets/css/stylesheet.css";
+/* @import "~assets/css/stylesheet.css"; */
 
 /* switch (sessionStorage.getItem('buttonColor')) {
     case 'address': {
