--- a/src/app/admin/register/register.component.html
+++ b/src/app/admin/register/register.component.html
@@ -12,12 +12,12 @@
     <div class="row justify-content-center">
       <div class="col-md-4 text-center mt-5">
         <a href="/login">
-          <img class="idLink-logo" src="/assets/images/idlink_logo_h.svg" alt="IDLink">
+          <img class="idLink-logo" src="/assets/images/logo.jpg" alt="IDLink">
         </a>
       </div>
     </div>
     <div class="login-container row justify-content-center">
-      <div class="col-md-4 mt-5">
+      <div class="col-md-3 mt-5">
         <div class="border">
           <div class="sfRegistrationStepper">
             <h1>{{pageTitle}}</h1>
