--- a/src/assets/sass/_colors.scss
+++ b/src/assets/sass/_colors.scss
@@ -6,7 +6,7 @@ $greyish: #b0afaf;
 $white: #ffffff;
 $warm-grey: #8b8b8b;
 $dashboardBg: #f9f9f9;
-$azure: #1da6fc;
+$azure: #ff514e;
 // $primary: #0080ff;
 $primary: $azure;
 $black: #000000;
