--- a/src/app/admin/account/forgot-pwd/forgot-pwd.component.html
+++ b/src/app/admin/account/forgot-pwd/forgot-pwd.component.html
@@ -15,7 +15,7 @@
         <!-- <div class="col-md-offset-4 col-md-4 login"> -->
         <div class="col-md-4 text-center mt-5">
           <a href="/login">
-            <img class="idLink-logo" src="/assets/images/idlink_logo_h.svg" alt="IDLink">
+            <img class="idLink-logo" src="/assets/images/logo.jpg" alt="IDLink">
           </a>
         </div>
       </div>
