--- a/src/app/admin/register/register.component.html
+++ b/src/app/admin/register/register.component.html
@@ -17,8 +17,8 @@
       </div>
     </div>
     <div class="login-container row justify-content-center">
-      <div class="col-md-3 mt-5">
-        <div class="border">
+      <div class="col-md-2 mt-5">
+        <div class="">
           <div class="sfRegistrationStepper">
             <h1>{{pageTitle}}</h1>
             <div *ngIf="serverError" class="row">
@@ -30,94 +30,10 @@
             </div>
             <!-- <div [ngClass]="{'container-fluid p-0 m-0': isUserLoggedIn, 'heightWrapper': !isUserLoggedIn}"></div>  *ngIf="plan != 'trial'" > -->
             <div [ngClass]="{'trialUser': plan == 'trial', 'registered': plan != 'trial'}">
-              <mat-horizontal-stepper #stepper [linear]="isLinear" [@.disabled]="true">
-                <!-- <ng-template matStepperIcon="number" let-index="index">    // this is code but not working
-                  {{index + 1}}
-                </ng-template> -->
-                <mat-step [stepControl]="createForm" class="visibleflow pl-0" [@.disabled]="true">
-                  <small class="form-text text-muted">{{pageInformation}}</small>
-                  <h2 class="childTitle-2">{{titleCompanyInfo}}</h2>
-                  <form *ngIf="isStep1" class="text-center" enctype="multipart/form-data" [formGroup]="createForm">
-                    <div class="form-group text-left">
-                      <div *ngIf="createForm.controls.companyName.hasError('required') && createForm.controls.companyName.touched" class="errorMessages p-0 m-0">
-                        Company Name is required.
-                      </div>
-                      <label class="sr-only" for="login-companyName">Company Name</label>
-                      <div class="input-group mb-2 mr-sm-2">
-                        <div class="input-group-prepend">
-                          <div class="input-group-text bg-white">
-                            <img src="/assets/images/icons/company.svg" class="sfIconTrans" alt="" />
-                          </div>
-                        </div>
-                        <input formControlName="companyName" type="text" class="form-control border-left-0" id="login-companyName" placeholder="Company Name"
-                          required>
-                      </div>
-                    </div>
+       
 
-                    <div class="form-group text-left">
-                      <!-- <div *ngIf="createForm.controls.websiteUrl.hasError('required') && createForm.controls.websiteUrl.touched" class="errorMessages p-0 m-0">
-                      Company Website is required.
-                    </div> Website is not complousory field -->
-                      <label class="sr-only" for="login-websiteUrl">Company Website</label>
-                      <div class="input-group mb-2 mr-sm-2">
-                        <div class="input-group-prepend">
-                          <div class="input-group-text bg-white">
-                            <img src="/assets/images/icons/globe.svg" class="sfIconTrans" alt="" />
-                          </div>
-                        </div>
-                        <input formControlName="websiteUrl" type="text" class="form-control border-left-0" id="login-websiteUrl" placeholder="Company Website">
-                      </div>
-                    </div>
-
-                    <div class="form-group text-left">
-                      <div *ngIf="createForm.controls.companyPhone.hasError('required') && createForm.controls.companyPhone.touched" class="errorMessages p-0 m-0">
-                        Company Phone is required.
-                      </div>
-                      <label class="sr-only" for="login-companyPhone">Company Phone</label>
-                      <div class="input-group mb-2 mr-sm-2">
-                        <div class="input-group-prepend">
-                          <div class="input-group-text bg-white">
-                            <img src="/assets/images/icons/phone.svg" class="sfIconTrans" alt="" />
-                            <div ngbDropdown class="ml-25" aria-labelledby="countryDropdown">
-                              <button class="btn dropdown-toggle bg-white pl-0 pt-0 pb-0" id="dropdownMenu1" ngbDropdownToggle>
-                                {{phoneDisplayMessage}}
-                              </button>
-                              <div ngbDropdownMenu class="dropdown-menu sfOverflow" id="countryDropdown">
-                                <div *ngFor="let country of countries">
-                                  <button class="dropdown-item" id="country" (click)="changephoneCountry(country.name,country.dial_Code)">{{country.name}} ({{country.dial_Code}})</button>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                        <input formControlName="companyPhone" class="form-control border-left-0" id="login-companyPhone" id="login-companyPhone"
-                          type="text" aria-required="true" maxlength="10" />
-                      </div>
-                    </div>
-
-                    <div class="row">
-                      <div class="col text-left pl-1">
-                        <button type="button" class="btn btn-link text-large" id="cancelBtn" (click)="cancelUser()">Cancel</button>
-                      </div>
-                      <div class="col text-right">
-                        <button type="button" class="btn btn-primary" id="companyInfoBtn" (click)="onNext(stepper)" [disabled]="!createForm.valid">
-                          Next
-                          <svg aria-hidden="true" class="icon icon-long-arrow-right">
-                            <use xlink:href="#icon-long-arrow-right"></use>
-                            <symbol id="icon-long-arrow-right" viewBox="0 0 27 28">
-                              <title>long-arrow-right</title>
-                              <path d="M27 13.953c0 0.141-0.063 0.281-0.156 0.375l-6 5.531c-0.156 0.141-0.359 0.172-0.547 0.094-0.172-0.078-0.297-0.25-0.297-0.453v-3.5h-19.5c-0.281 0-0.5-0.219-0.5-0.5v-3c0-0.281 0.219-0.5 0.5-0.5h19.5v-3.5c0-0.203 0.109-0.375 0.297-0.453s0.391-0.047 0.547 0.078l6 5.469c0.094 0.094 0.156 0.219 0.156 0.359v0z"></path>
-                            </symbol>
-                          </svg>
-                        </button>
-                      </div>
-                    </div>
-                  </form>
-                </mat-step>
-
-                <mat-step [stepControl]="userDataFormGroup" class="visibleflow" [@.disabled]="true">
-                  <form *ngIf="isStep2" class="text-center" enctype="multipart/form-data" [formGroup]="userDataFormGroup">
-                    <h2 class="childTitle-2 text-left pt-1">{{titleyourInfo}}</h2>
+         
+                  <form class="text-center" enctype="multipart/form-data" [formGroup]="userDataFormGroup">
                     <div class="row" *ngIf="userDataFormGroup.controls.firstName.hasError('required') && userDataFormGroup.controls.firstName.touched">
                       <div class="col-sm-12 text-left errorMessages pl-3 p-0 m-0">
                         <div class="form-group text-left">
@@ -156,7 +72,7 @@
                     </div>
 
 
-                    <div class="form-group text-left">
+                    <!-- <div class="form-group text-left">
                       <div *ngIf="userDataFormGroup.controls.jobTitle.hasError('required') && userDataFormGroup.controls.jobTitle.touched" class="errorMessages p-0 m-0">
                         Job Title is required
                       </div>
@@ -169,7 +85,7 @@
                         </div>
                         <input formControlName="jobTitle" type="text" class="form-control border-left-0" id="login-jobTitle" placeholder="Job Title">
                       </div>
-                    </div>
+                    </div> -->
 
                     <div class="form-group text-left">
                       <div *ngIf="(userDataFormGroup.controls.email.hasError('required') && userDataFormGroup.controls.email.touched) || (userDataFormGroup.controls.email.hasError('email') && userDataFormGroup.controls.email.touched)"
@@ -199,7 +115,7 @@
                     </div>
                     <br/>
                     <div class="row">
-                      <div class="col text-left pl-1">
+                      <!-- <div class="col text-left pl-1">
                         <div class="col text-left pl-1">
                           <button type="button" class="btn btn-link text-large" id="backBtn" (click)="onBackClick(stepper)">
                             <svg class="icon icon-long-arrow-left">
@@ -212,7 +128,7 @@
                             Back
                           </button>
                         </div>
-                      </div>
+                      </div> -->
                       <div class="col text-right">
                         <button type="button" class="btn btn-primary btn-block" id="registerpBtn" (click)="createAccount(stepper)" [disabled]="!userDataFormGroup.valid">
                           Create Account
@@ -227,118 +143,9 @@
                       </div>
                     </div>
                   </form>
-                </mat-step>
+       
 
-                <mat-step *ngIf="plan != 'trial'" [@.disabled]="true" [stepControl]="creditDataFormGroup">
-                  <form *ngIf="isStep3" class="text-center" enctype="multipart/form-data" [formGroup]="creditDataFormGroup" [ngClass]="">
-
-                    <div>
-                      <div class="register-title text-left">
-                        <h2 class="childTitle-3 pb-0">Today's payment: €{{planId=="level2"?level2Amount:level1Amount}}(1 year)</h2>
-                        <small class="form-text text-muted">Consumption fees will be billed monthly.</small>
-                      </div>
-                    </div>
-                    <br />
-                    <p class="text-left">
-                      <img src="/assets/images/icons/visa.svg" alt="" />
-                      <img src="/assets/images/icons/mastercard.svg" alt="" />
-                      <img src="/assets/images/icons/americanexpress.svg" alt="" />
-                    </p>
-
-                    <div *ngIf="serverError" class="row justify-content-md-center">
-                      <div class="col-md-12">
-                        <span class="errorMessages" *ngFor="let error of serverError">
-                          {{error.value}}
-                        </span>
-                      </div>
-                    </div>
-
-
-                    <div class="form-group text-left">
-                      <div *ngIf="creditDataFormGroup.controls.cardNumber.hasError('required') && creditDataFormGroup.controls.cardNumber.touched"
-                        class="errorMessages p-0 m-0">
-                        Credit Card Number is required.
-                      </div>
-                      <!-- <label for="cardNumber">Card number</label> -->
-                      <div class="input-group">
-                        <div class="input-group-prepend">
-                          <span class="input-group-text bg-white">
-                            <img src="/assets/images/icons/credit_card.svg" class="sfIconTrans" alt="" />
-                          </span>
-                        </div>
-
-                        <input type="text" formControlName="cardNumber" maxlength="16" class="form-control border-left-0" placeholder="Card number">
-                      </div>
-                      <!-- input-group.// -->
-                    </div>
-                    <!-- form-group.// -->
-                    <div *ngIf="creditDataFormGroup.controls.expiration.hasError('required') && creditDataFormGroup.controls.expiration.touched"
-                      class="row">
-                      <div class="col-sm-12">
-                        <div class="form-group text-left">
-                          <div class="errorMessages p-0 m-0">
-                            Card Expiration month and year are required.
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div *ngIf="creditDataFormGroup.controls.cvv.hasError('required') && creditDataFormGroup.controls.cvv.touched" class="row">
-                      <div class="col-sm-12">
-                        <div class="form-group text-left">
-                          <div class="errorMessages p-0 m-0">
-                            CVV is required.
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-
-                    <div class="row">
-                      <div class="col-sm-6">
-                        <div class="form-group text-left">
-                          <label class="sr-only sr-only-focusable" for="Expiration">Card Expiration month and year</label>
-                          <div class="input-group pInputgroup">
-                            <div class="input-group-prepend">
-                              <span class="input-group-text bg-white">
-                                <img src="/assets/images/icons/calendar.svg" class="sfIconTrans" alt="" />
-                                <!-- <i class="fa fa-calendar-o"></i> -->
-                              </span>
-                            </div>
-                            <p-inputMask formControlName="expiration" mask="99/9999" placeholder="MM/YYYY" characterPattern="[0-9]" styleClass="form-control input-text ipa"></p-inputMask>
-                            <!-- <input type="text" formControlName="expiration" class="form-control border-left-0" name="Expiration" placeholder="mm/yyyy"> -->
-                          </div>
-                        </div>
-
-                      </div>
-                      <div class="col-sm-6">
-                        <div class="form-group text-left">
-                          <!-- <label class="sr-only sr-only-focusable" for="cvv">CVV</label> -->
-                          <div class="input-group">
-                            <div class="input-group-prepend">
-                              <span class="input-group-text bg-white">
-                                <img src="/assets/images/icons/lock_locked.svg" class="sfIconTrans" alt="" />
-                              </span>
-                            </div>
-
-                            <input type="text" formControlName="cvv" maxlength="3" class="form-control border-left-0" placeholder="CVV">
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- row.// -->
-                    <div class="row">
-                      <div class="col text-left pl-1">
-                        <button type="button" class="btn btn-link" id="backBtn" (click)="onBackClick(stepper)">Back</button>
-                      </div>
-                      <div class="col text-right">
-                        <!-- <button type="button" class="btn btn-primary btn-block" id="registerpBtn" (click)="registerUser(stepper)" [disabled]="!userDataFormGroup.valid">CREATE ACCOUNT</button> -->
-                        <button [disabled]="!creditDataFormGroup.valid" class="subscribe btn btn-primary btn-block" (click)="registerUser()" type="button">
-                          Confirm </button>
-                      </div>
-                    </div>
-
-                  </form>
-                </mat-step>
-              </mat-horizontal-stepper>
+          
             </div>
           </div>
         </div>
