--- a/src/assets/sass/stylesheet.scss
+++ b/src/assets/sass/stylesheet.scss
@@ -1953,8 +1953,7 @@ small.text-muted,
 .sfRegistrationStepper,
 .sfTemplateStepper {
   h1 {
-    padding-left: 30px;
-    padding-right: 30px;
+    text-align: center;
     padding-top: 20px;
   }
   .mat-horizontal-stepper-header-container,
