--- a/src/assets/sass/_colors.scss
+++ b/src/assets/sass/_colors.scss
@@ -1,4 +1,4 @@
-$grapefruit: #ff514e;
+$grapefruit: #03d0bf;
 $grapefruit-dark: #b30300;
 $tangerine: #ff8f00;
 $charcoal-grey: #3f454c;
@@ -6,7 +6,7 @@ $greyish: #b0afaf;
 $white: #ffffff;
 $warm-grey: #8b8b8b;
 $dashboardBg: #f9f9f9;
-$azure: #ff514e;
+$azure: #03d0bf;
 // $primary: #0080ff;
 $primary: $azure;
 $black: #000000;
