--- a/src/app/admin/login/login.component.html
+++ b/src/app/admin/login/login.component.html
@@ -58,7 +58,7 @@
 
 
             <div class="form-group loginBtn">
-              <button type="submit" class="btn btn-primary btn-block" id="signupBtn">LOGIN</button>
+              <button type="submit" class="btn btn-primary btn-block" [routerLink]="['/step1']" id="signupBtn">LOGIN</button>
             </div>
             <div class="form-group loginBtn">
               <span class="btnTitle">New to SafeProfile?</span>
