--- a/src/assets/sass/_colors.scss
+++ b/src/assets/sass/_colors.scss
@@ -1,4 +1,4 @@
-$grapefruit: #03d0bf;
+$grapefruit: #ff514e;
 $grapefruit-dark: #b30300;
 $tangerine: #ff8f00;
 $charcoal-grey: #3f454c;
@@ -6,7 +6,7 @@ $greyish: #b0afaf;
 $white: #ffffff;
 $warm-grey: #8b8b8b;
 $dashboardBg: #f9f9f9;
-$azure: #03d0bf;
+$azure: #ff514e;
 // $primary: #0080ff;
 $primary: $azure;
 $black: #000000;
@@ -30,11 +30,3 @@ $dark_green: $cyan;
 $pending: $tangerine;
 $green: #00d1b2;
 $btngreen: #28a745;
-
-$secondryColor:#0080ff;
-$thirdColor:#575757;
-$fourColor:#595959;
-$fifthColor:#cdcdcd;
-$primaryColor:#595959;
-$sendoryColor:#efefef;
-$thirdColor:#0080ff;
