--- a/src/assets/sass/stylesheet.scss
+++ b/src/assets/sass/stylesheet.scss
@@ -1235,7 +1235,6 @@ input.inputNoborder {
         color: $grapefruit;
         background-color: transparent;
         border-bottom: 2px solid $grapefruit;
-        border-top: solid 2px $grapefruit!important;
       }
     }
   }
@@ -1954,7 +1953,8 @@ small.text-muted,
 .sfRegistrationStepper,
 .sfTemplateStepper {
   h1 {
-    text-align: center;
+    padding-left: 30px;
+    padding-right: 30px;
     padding-top: 20px;
   }
   .mat-horizontal-stepper-header-container,
@@ -2880,610 +2880,4 @@ table {
 }
 input:focus{
   border:none;
-}
-
-
-.crcMain{
-  margin: 50px 30px 0 100px;
-  background: $white;
-  position: relative;
-  border-radius: 5px;
-.card-header{
-  background: $white;
-  .userDetails{
-      text-align: left;
-      .avatarLetter{
-          margin: 0;
-      }
-  }
-  .closeBut{
-      text-align: right;
-      button{
-          font-size: $text-40;
-      }
-  }
-}
-.leftCont{
-  display: block;
-  h3{
-      font-size: $text-14;
-      color:$warm-grey;
-      padding:15px 0;
-      font-weight:bold;
-      margin: 0;
-  }
-  .badgesList{
-      display:block;
-      margin: 0;
-      padding:0;
-      li{
-          display: block;
-          margin-bottom: 8px;
-          a{
-              background: $fifthColor;
-              border-radius: 4px;
-              color: $white;
-              line-height: 18px;
-              font-size: $text-12;
-              padding: 3px 8px;
-              margin-right:8px;
-          }
-          a.active{
-              background: $lightBlack;
-          }
-          a:hover{
-              text-decoration: none;
-          }
-          .badge{
-              background: $secondryColor;
-              color:$white;
-              border-radius: 1rem;
-          }
-      }
-      
-  }
-  
-}
-
-.panel{
-  box-shadow: inherit;
-}
-
-.nav-tabs{
-  .nav-item{
-      background: $white!important;
-  }
-}
-
-.rightCont{
-  display: block;
-  .dragFileArea{      
-      text-align: center;
-      font-size: $text-18;
-      color:$secondryColor;
-      display: block;
-      margin: 20px 0 0;
-      a{
-          display: block;
-      }
-  }
-  .panel-default{
-      border:none;
-      .panel-heading{
-          padding:0;
-          background: $white;
-          .nav-tabs{
-              border:none;
-              li{
-                  background: $greyish;
-                  width:130px;
-                  text-align: center;    
-                  font-size: $text-18;
-                  font-weight:bold;
-                  color:$fourColor;  
-                  margin-right: 10px;
-                  a{
-                      color:$fourColor;
-                      padding: 8px 15px 4px;
-                      margin: 0;
-                  }              
-              }
-              li.active{
-                  background: $white;
-                  a{
-                      border-top:solid 2px $primary;
-                  }                    
-              }
-          }
-      }
-  }
-  
-  .recordCont{
-      display: block;
-      margin: 30px 0;
-      h4{
-          font-size: $text-14; 
-          color: $fourColor;
-          border-bottom:solid 1px $dashboardBg;
-          margin-bottom: 15px;
-          text-transform: uppercase;
-          font-weight:bold;
-          padding-bottom: 5px;
-          width:60%;
-          clear: both;
-      }
-      .addBox{
-          margin:0;
-          padding:0;
-          @media screen and (max-width:414px) {
-              width:100%;   
-          }
-          li{
-              float:left;
-              margin-right: 20px;
-              width:112px;      
-              text-align: center;   
-              position:relative;
-              font-size: 0; 
-              margin-bottom: 30px;               
-              a{
-                  color:$dashboardBg;
-                  font-size: $text-14;
-                  border: dotted 2px $dashboardBg;
-                  text-decoration: none;
-                  min-height:145px;
-                  display: block;
-                  :hover{
-                      text-decoration: none;
-                  }
-              }
-              span{
-                  display: block;
-                  font-size: $text-24;
-                  padding-top: 44px;
-                  line-height: 25px;                    
-              }  
-              
-              .progress {
-                  height: 5px;
-                  overflow: hidden;
-                  background-color: $greyish;
-                  -webkit-box-shadow: none;
-                  box-shadow: none;
-                  position: absolute;
-                  bottom: 0px;
-                  left: 0;
-                  width: 100%;
-                  .progress-bar{
-                      background-color: $primary;
-                      box-shadow: none!important;
-                  }
-              } 
-              .progressOk{
-                  background: $primary;
-                  border-radius:50%;
-                  position: absolute;
-                  bottom: -12px;
-                  right: -14px;
-                  height:30px;
-                  width:30px;
-                  color: $white;   
-                  padding-top: 5px;  
-                  .text-white{
-                      font-size: $text-20;
-                  }               
-              } 
-              .progressinComp{
-                  background: $white;
-                  border-radius:50%;
-                  border:solid 1px $greyish;
-                  position: absolute;
-                  bottom: -12px;
-                  right: -14px;
-                  height:30px;
-                  width:30px;
-                  color: $white;
-              }            
-          }
-          li.attached{
-              border:none;
-              box-shadow: 0 0 4px $greyish; 
-              display: inline-block;    
-              .attachedCont{
-                  display:block;
-                  text-align: center;
-                  padding: 0 6px;
-                  .nameTxt{
-                      font-size: $text-10;
-                      color: $greyish;
-                      padding-top: 0;
-                      padding: 0;
-                      line-height: 8px;
-                      text-align: left;
-                  }
-                  .inputBox{
-                      position: inherit;
-                      height:12px;
-                      width: 100px;                        
-                  }
-              }               
-          }
-      }
-      .filesList{
-          margin:0;
-          padding:0;
-          width:100%;            
-          li{
-              display:block;
-              border-bottom:solid 1px $greyish;
-              padding: 10px 0;
-              .fileName{
-                  width:20%;
-                  display: inline-block;
-                  .nametxt{
-                      display: block;
-                      font-size: $text-12;
-                  }
-                  .uploadTime{
-                      font-size: $text-11;
-                      color: $greyish;
-                  }                    
-                  .progressFile {
-                      height: 5px;
-                      overflow: hidden;
-                      background-color: $greyish;
-                      -webkit-box-shadow: none;
-                      box-shadow: none; 
-                      width:100px;
-                      .progress-bar{
-                          background-color: $primary;
-                          box-shadow: none!important;
-                      }
-                  }
-              }
-              .dataTag{
-                  width:75%;
-                  display: inline-block;
-                  a.addTag{
-                      font-size: $text-12;
-                      color: $greyish;
-                      padding: 6px 8px 5px;                       
-                      border-radius: 50%;
-                      width: 29px;               
-                      fa{
-                          background: $greyish;
-                          color: $white;
-                          border-radius: 50%;
-                          padding: 4px 5px 2px 5px;
-                      }
-                  }
-                  .tagName{
-                      background: $greyish;
-                      border-radius: 4px;
-                      padding: 3px 6px;
-                      display: inline-block;
-                      margin-right: 5px;
-                      font-size: $text-12;
-                      color: $white;
-                      .closeButt{
-                          font-size: $text-14;
-                          color: $greyish;
-                          border-radius: 50%;
-                          display: inline-block;
-                          margin-right: 5px;
-                          background: $dashboardBg;                            
-                          padding: 0 6px;
-                          font-weight: bold;
-                      }
-                  }
-              }
-              a.menuIcon{
-                  width:13px;
-                  height:13px;
-                  float:right;
-              }
-          }
-          li:last-child{
-              border:none;
-          }
-      }       
-      
-  }
-}
-
-.nav-link{
-  display: block;
-  padding: .5rem 3rem;
-  background: $white;
-  border-radius: inherit;
-  margin: 0 10px 0 0;
-  color: $gray;
-  font-weight: bold;   
-  border-radius: 0!important; 
-}
-.nav-link.active{
-  border-top:solid 2px $primary!important;
-}
-.stageEmpty.isSmall{
-  background: none!important;
-}
-.ui-widget-header{
-  background: none!important;
-  border:none!important;
-}
-.ui-corner-bottom{
-  display: none!important;
-}
-
-.nav-link{
-  background: $black;
-}
-
-
-.avatarLetter {
-  border-radius: 50%;
-  margin: 0 auto;
-  overflow: hidden;
-  position: relative;
-  height: 46px;
-  width: 49px;
-  z-index: 0;
-  line-height: 46px;
-  padding: 0;
-  font-size: $text-14;
-  color: $white;
-  background-color: $azure;
-  text-align: center;
-  font-weight: bold;
-  letter-spacing: 1px; 
-  float:left;
-}
-.dropButt{
-  background: none;
-  border: none;
-  font-size: $text-18;
-  margin: 7px 0 0 10px;
-  padding: 0 11px 5px;
-  color:$gray;
-}
-.blueDropButt{
-  background: none;
-  border: none;  
-  color:$azure;
-}
-.nameTxt{
-  display: inline-block;
-  padding: 8px 0;
-  font-size: $text-18;
-}
-.requestTxt{
-  color:$azure;
-  padding: 11px 0px 8px 20px;
-}
-.timeTxt{
-  padding: 8px 0 8px 20px;  
-}
-.timeTxt i{
-  font-size: $text-22;
-}
-.uploadTime{
-  display: block;
-  font-size: $text-11;
-}
-
-  .selected-list .c-btn {
-      box-shadow: none !important;
-      border: 0 !important;
-      display: inline-block !important;
-      width: auto !important;
-      position: relative !important; }
-    
-    .selected-list .c-list .c-token .fa-remove {
-      margin-left: 10px !important;
-      margin-right: 2px; }
-    
-    .selected-list .fa-angle-down,
-    .selected-list .fa-angle-up {
-      padding: 2px 4px !important;
-        font-size: $text-13 !important;
-        border-radius: 50%!important;
-        color: $white;
-        right:-10px!important;
-    }
-    
-    .selected-list .c-list .c-token {
-      background: $thirdColor !important;
-      border-radius: 4px !important;
-      display: inline-block;
-      font-size: $text-11;  
-     }
-     .c-label{
-      display: block;
-      float: left;
-      padding: 0px 3px 2px;
-    }
-    .fa-remove{
-        font-size: $text-12;
-        z-index: 100000000;
-        border-radius: 50%;    
-        padding: 1px 2px;
-        color: $thirdColor;
-    }
-
-  button:focus {
-    outline: none;
-  }
-  background: $white;
-  .nav {
-    &.nav-tabs {
-      background-color: $white;
-      border-top-left-radius: 0.5em;
-      border-top-right-radius: 0.5em;
-      padding: 2rem 0px 0px 0;
-    }
-    .nav-item {
-      margin-bottom: -2px;
-      margin-right: 10px;
-      .nav-link {
-        color: $primaryColor;
-        text-transform: uppercase;
-        padding-bottom: 10px;
-        font-weight: bold;
-        background: $sendoryColor;
-        border-radius: 0px;
-        padding: .5rem 0;
-        border-top: solid 2px $sendoryColor;
-        width: 150px;
-        text-align: center;
-        &.active {
-          border: 0;
-          color: $primaryColor;
-          background-color: transparent;
-          border-bottom: 2px solid $white;
-          border-top: solid 2px $thirdColor;
-          border-left: solid 2px $sendoryColor;
-          border-right: solid 2px $sendoryColor;
-        }
-      }
-    }
-  }
-.nav .nav-item .nav-link {
-    &:focus, &:hover {
-      border: 0;
-      color: $primaryColor;
-      background-color: transparent;
-      border-bottom: 2px solid $white;
-      border-top: solid 2px $thirdColor;
-      border-left: solid 2px $sendoryColor;
-      border-right: solid 2px $sendoryColor;
-    }
-  }
-.nav .nav-item.show .nav-link {
-  border: 0;
-  color: $grapefruit;
-  background-color: transparent;
-  border-bottom: 1px solid $grapefruit;
-}
-.selected-list {
-  .c-btn {
-    box-shadow: none !important;
-    border: 0 !important;
-    display: inline-block !important;
-    width: auto !important;
-    position: relative !important;
-    padding: 0 !important;
-  }
-  .c-list .c-token .fa-remove {
-    margin-left: 10px !important;
-    margin-right: 2px;
-  }
-  .fa-angle-down, .fa-angle-up {
-    padding: 3px 0 !important;
-    font-size: $text-13 !important;
-    border-radius: 50% !important;
-    background: $cyan;
-    color: $white;
-    right: (-22px) !important;
-    border: none !important;
-    width: 19px;
-    text-align: center;
-  }
-  .c-list {
-    .c-token {
-      background: $thirdColor !important;
-      border-radius: 4px !important;
-      display: inline-block;
-      font-size: $text-12;
-    }
-    width: 100% !important;
-  }
-}
-.c-label {
-  display: block;
-  float: left;
-  padding: 0px 3px 2px;
-}
-.fa-remove {
-  font-size: $text-12;
-  z-index: 100000000;
-  background: $gray;
-  border-radius: 50%;
-  padding: 1px 2px;
-  color: $thirdColor;
-}
-.stageEmpty.isSmall {
-  padding: 17px 1rem 0;
-  line-height: 36px;
-  color: rgba(0, 0, 0, 0.3);
-  border-color: rgba(0, 0, 0, 0.15);
-  background-color: rgba(0, 0, 0, 0.03);
-  border-radius: 3px;
-  span {
-    vertical-align: middle;
-    font-size: $text-16;
-    background: transparent;
-    width: 100%;
-    line-height: 20px;
-    z-index: 999;
-    height: 70px;
-    margin-top: -93px;
-    border: none;
-    color: $secondryColor;
-
-  }
-}
-.paymentDialog .ui-widget-header {
-  padding: 2rem 4rem 0.5rem 4rem !important;
-  background: $white;
-}
-.stageEmpty.isSmall {
-  background: none !important;
-  line-height: normal;
-}
-.ui-widget-header {
-  background: none !important;
-  border: none !important;
-}
-.ui-corner-bottom {
-  display: none !important;
-}
-.ui-widget-header {
-  height: 30px;
-}
-.importFile {
-  line-height: 50px;
-  height: inherit;
-}
-.tab-content {
-  padding: 2rem 1rem !important;
-}
-.uploadedImg {
-  border-bottom: solid 1px $gray;
-  display: block;
-  padding: 10px 0;
-}
-.imgName {
-  width: 18%;
-  float: left;
-}
-.imgTags {
-  width: 77%;
-  float: left;
-}
-.usernameTxt {
-  display: inline-block;
-  padding: 8px 0 8px 20px;
-  font-size: $text-18;
-}
-.uploadImgDrop {
-  float: right;
-  padding-top: 8px;
-  i {
-    color: $greyish;
-  }
-  background: none;
-  border: none;
-  font-size: $text-18;
-  color: $greyish;
-}
 }
