--- a/src/assets/sass/stylesheet.scss
+++ b/src/assets/sass/stylesheet.scss
@@ -3196,7 +3196,7 @@ input:focus{
   padding: .5rem 3rem;
   background: $white;
   border-radius: inherit;
-  margin: 0 10px 0 0;
+  margin: 0;
   color: $gray;
   font-weight: bold;   
   border-radius: 0!important; 
